--- a/index.html
+++ b/index.html
@@ -9,7 +9,13 @@
     </head>
     <body>
 <body>
-    <h1>AluraBook</h1>
+    <header class="cabeçalho">
+        <span class="cabeçalho__menu-hamburguer"></span>
+        <img src="img/Logo.svg" alt="Logo da AluraBooks">
+        <a href="#"><img src="img/Favoritos.svg" alt="Meus favoritos"></a>
+        <a href="#"><img src="img/Compras.svg" alt="Carrinho de compras"></a>
+        <a href="#"><img src="img/Usuario.svg" alt="Meu perfil"></a>
+    </header>
 </body>
     </body>
 </html>
